[tool.poetry]
name = "creating-data-in-a-training-sql-database"
version = "0.1.0"
description = ""
authors = ["Dmitry-Peskov <dv.peskov@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
pyodbc = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
